更新界面显示方式为层

--- a/docs/讨论.md
+++ b/docs/讨论.md
@@ -119,3 +119,13 @@ AI状态：
 
 远程生物：判定攻击目标后，若不在攻击范围内，移动到攻击范围内，若小于危险距离值（待设定），则后退到等于此值位置，
 
+
+界面制作
+  1. 基本界面(摇杆控制器、战斗控制器)【江宇英】
+  2. [ ]状态界面(人物状态【江宇英】、任务状态【周昱志】、装备状态【周昱志】、技能状态【周昱志】、佣兵状态[有解雇的接口]【周昱志】、道具状态【周昱志】)
+  3. [ ]道具买卖界面【周昱志】
+  4. [ ]任务界面【周昱志】
+  5. [ ]佣兵雇佣【周昱志】
+  6. [ ]武器升级界面【周昱志】
+
+
