改用最新的库，界面使用了扩展控件实现

--- a/docs/界面测试.md
+++ b/docs/界面测试.md
@@ -10,7 +10,7 @@
 ### 800x480分辨率 ###
 - **OK** 地域名与任务名重叠了
     ![image](./images/接受任务/1.png)
-- 任务用一个列表显示，没有滚动，结果导致太多任务会有些看不到
+- **OK** 任务用一个列表显示，没有滚动，结果导致太多任务会有些看不到
     ![image](./images/接受任务/2.png)
 
 ### 960x640分辨率 ###
@@ -18,16 +18,16 @@
 ## 道具买卖 ##
 
 ### 800x480分辨率 ###
-- 东西都用一个列表来显示，结果太多东西导致列表越界。下面最后一项与直线重叠了。
+- **OK** 东西都用一个列表来显示，结果太多东西导致列表越界。下面最后一项与直线重叠了。
     ![image](./images/道具买卖/1.png)
 
 ### 960x640分辨率 ###
 
 
-## 装备升级 ##        
+## 装备升级 ##
 
 ### 800x480分辨率 ###
-- 武器都用一个列表来显示，结果太多东西导致列表越界。下面越过了直线。
+- **OK** 武器都用一个列表来显示，结果太多东西导致列表越界。下面越过了直线。
     ![image](./images/装备升级/1.png)
 
 ### 960x640分辨率 ###
