战斗控制器改为可以使用摇杆

--- a/docs/场景相关.md
+++ b/docs/场景相关.md
@@ -36,3 +36,22 @@
 ### triggers ###
 一个字典，键为当前场景中的触发器的ID，值为lua脚本文件的路径
 
+## 场景切换 ##
+0. 提交场景切换请求
+1. 运行场景切换脚本
+    0. 检测是否已经接收任务
+        0. 已经接受任务的情况
+            0. 检测请求的场景的ID，是否属于任务地图
+                0. 若如属于任务地图，则任务管理器开始任务
+        1. 已经开始任务的情况
+            0. 若请求的场景并非任务地图，则提示是否放弃任务
+            1. 若请求的场景为任务地图，则直接加载地图
+        2. 没有接受任务的情况
+            0. 直接加载地图，不做什么处理
+    1. 显示加载界面
+    1. 加载场景
+    2. 撤销加载界面
+    3. 执行切换场景操作
+2. 
+3. 
+
